ifc-macros/test/useless_declassify.stderr
warning: Unused attribute
 --> test/useless_declassify.rs:5:20
  |
5 |         #[IFC(Low, Declassify)]
  |                    ^^^^^^^^^^
  |
  = help: Try removing it

warning: Unused attribute
 --> test/useless_declassify.rs:7:20
  |
7 |         #[IFC(Low, Declassify)]
  |                    ^^^^^^^^^^
  |
  = help: Try removing it

error:
  --> test/useless_declassify.rs:10:5
   |
10 |     compile_error!("");
   |     ^^^^^^^^^^^^^^^^^^
